--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "optimized-images-loader": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "shuffle-array": "^1.0.1"
