--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "optimized-images-loader": "^0.4.0",
+    "overlayscrollbars": "^1.13.1",
+    "overlayscrollbars-react": "^0.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazyload": "^3.2.0",
